# refined-cedict-json

./: Cargo.toml  README.md  rust-toolchain  strip_written_chinese.txt  stroke-count.txt
assets/: abbreviations.txt  adjectives.txt  adverbs.txt  character-decomposition.txt  chemical-elements.txt  cities.txt  countries.txt  dates-and-days-of-week.txt  pinyin-map.txt  stroke-order.txt  verbs.txt
public/: 2019冠状病毒病.json  3C.json  421.json  502胶.json  88.json  A.json  AA制.json  AB制.json  ACG.json  A圈儿.json  A片.json  A货.json  B.json  BM.json  BP机.json  B型超声.json  B格.json  B超.json  CJB.json  CP值.json  C盘.json  C罗.json  E仔.json  G友.json  G弦裤.json  IP.json  K书.json  K人.json  K仔.json  K房.json  K歌.json  K线.json  K线图.json  MV.json  M巾.json  NG.json  NG片段.json  NG镜头.json  N久.json  N挡.json  (+71456 more)
src/: api.rs  customReader.rs  enhancer.rs  main.rs  models.rs  test.rs  utils.rs
src/api/: get_character_decomposition_from_hanzicraft.rs  get_radicals_from_wikipedia.rs  mod.rs
src/refiner/: mod.rs  parse_decomposition.rs  refine_meaning_record.rs  refine_records.rs  to_pinyin.rs
src/utils/: get_abbreviations_from_file.rs  get_decomposition_from_file.rs  get_descriptors_from_file.rs  get_radicals_from_file.rs  is_cjk.rs  mod.rs  parse_ce_record.rs
