[package]
name = "refined-cedict-json"
version = "0.1.0"
authors = ["Jozef Podlecki <jozef.witold.podlecki@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
scraper = "0.12.0" 
select = "0.5.0"
urlencoding = "2.1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
regex = "1.5"
hashbrown = "0.11.2"
zip = "0.5.13"
log = "0.4.0"
env_logger = "0.8.4"
bytes = "1"
phf = { version = "0.10.0", features = ["macros"] }
soup = "0.5.1"